--- a/least_privilege/Dockerfile2
+++ b/least_privilege/Dockerfile2
@@ -1,8 +1,10 @@
 FROM golang:alpine
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup -h /home/appuser
-COPY app.go /app/app.go
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 WORKDIR /app
+COPY app.go .
 RUN CGO_ENABLED=0 go build app.go
+
 USER appuser
 
 ENTRYPOINT /app/app
