--- a/least_privilege/Dockerfile3
+++ b/least_privilege/Dockerfile3
@@ -1,9 +1,12 @@
 FROM golang:alpine
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup -h /home/appuser
-COPY app.go /app/app.go
-RUN chown appuser:appgroup /app
+
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+RUN mkdir -p /app/log && chown -R appuser:appgroup /app
+
 WORKDIR /app
-USER appuser
+COPY app.go .
 RUN CGO_ENABLED=0 go build app.go
+
+USER appuser
 
 ENTRYPOINT /app/app
