--- a/reduce_image_size/Dockerfile2
+++ b/reduce_image_size/Dockerfile2
@@ -1,5 +1,4 @@
-FROM golang:bullseye
-ARG DEBIAN_FRONTEND=noninteractive
+FROM golang:alpine
 COPY ./app.go .
 RUN CGO_ENABLED=0 go build app.go
 CMD ["./app"]
