--- a/reduce_image_size/Dockerfile3
+++ b/reduce_image_size/Dockerfile3
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
@@ -15,11 +15,15 @@ RUN apt-get update && \
     pip3 install pipenv &&\
     rm -rf /var/lib/apt/lists/* &&\
     apt-get clean &&\
-    pip3 install --user pipenv
+    pip3 install --user pipenv &&\
+    addgroup --system appgroup &&\
+    useradd --system -g appgroup appuser &&\
+    mkdir /python_app &&\
+    chown -R appuser:appgroup /python_app
 
-COPY ./python_app /python_app
-
+USER appuser
 WORKDIR /python_app
+COPY ./python_app /python_app
 RUN PIPENV_VENV_IN_PROJECT=1 pipenv install
 
 ENTRYPOINT pipenv run python3 manage.py runserver 0.0.0.0:8000
