--- a/reduce_image_size/Dockerfile4
+++ b/reduce_image_size/Dockerfile4
@@ -10,11 +10,15 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends sqlitebrowser \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean \
-    && pip3 install --user pipenv
+    && pip3 install --user pipenv \
+    && addgroup --system appgroup \
+    && useradd --system -g appgroup appuser \
+    && mkdir /python_app \
+    && chown -R appuser:appgroup /python_app
 
-COPY ./python_app /python_app
-
+USER appuser
 WORKDIR /python_app
+COPY ./python_app /python_app
 RUN PIPENV_VENV_IN_PROJECT=1 pipenv install
 
 ENTRYPOINT pipenv run python3 manage.py runserver 0.0.0.0:8000
